--- a/src-data/load-p5.html
+++ b/src-data/load-p5.html
@@ -1,3 +1,8 @@
+<!--
+  Loads p5.js from the web so that we can extract the property/method names of p5 instance,
+  which will be globally used in the global mode.
+-->
+
 <!DOCTYPE html>
 <html>
 
